--- a/gradle/android-mixed-java-kotlin-project/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/android-mixed-java-kotlin-project/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Oct 27 23:02:55 MSK 2015
+#Fri Mar 04 08:15:51 PST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.5-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
